# STLoads

./: .env.example  .gitignore  .tmp-cos-test.txt  .user.ini  GOOGLE_MAPS_SETUP.md  README.md  TMS Architecture.md  UX_IMPROVEMENTS.md  composer.json  error_log  notes.txt  package-lock.json  package.json  tree.txt
rust-port/: .ceignore  .dockerignore  .env.ibm.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  Dockerfile.landing  README.md  frontend-entrypoint.sh  nginx.frontend.conf.template  nginx.landing.conf  package-lock.json  package.json  playwright.config.ts  runtime-config.js.template
rust-port/.github/workflows/: ci.yml
rust-port/crates/backend/: Cargo.toml
rust-port/crates/backend/src/: api_contract.rs  app.rs  atmp_outbound.rs  auth_session.rs  config.rs  document_storage.rs  document_validation.rs  email.rs  integration_auth.rs  lib.rs  main.rs  partner_auth.rs  rate_limit.rs  realtime_bus.rs  screen_data.rs  state.rs  stripe.rs  test_support.rs  tms_scheduler.rs
rust-port/crates/backend/tests/: atmp_contract.rs  atmp_outbound.rs  document_workflows.rs  eligibility.rs  integration_auth.rs  load_board_search.rs  marketplace_workflows.rs  tenant_scope.rs  tms_compliance_contract.rs
rust-port/crates/db/: Cargo.toml
rust-port/crates/db/migrations/: 0001_core_identity_dispatch.sql  0002_auth_rbac_scaffolding.sql  0003_marketplace_tracking_scaffolding.sql  0004_payments_tms_scaffolding.sql  0005_chat_presence_read_receipts.sql  0006_load_document_upload_access.sql  0007_email_outbox.sql  0008_enterprise_board_core.sql  0008_hashed_session_tokens.sql  0009_enterprise_marketplace.sql  0009_security_rate_limits.sql  0010_enterprise_operations.sql  0010_privileged_mfa.sql  0011_organizations_tenant_foundation.sql  0011_tenant_rbac_impersonation.sql  0012_audit_break_glass.sql  0012_load_board_search_alerts.sql  0013_marketplace_chat_notifications.sql  0013_organization_role_permissions.sql  0014_document_hardening.sql  0014_support_notes.sql  0015_enterprise_identity.sql  0015_payment_hardening.sql  0016_access_reviews.sql  0016_stloads_compliance_record.sql  0017_audit_ledger_hardening.sql  0018_request_correlation_ids.sql  0019_legal_agreements.sql  0020_operating_authority_compliance.sql  0021_document_versions.sql  0022_required_document_rules.sql  0023_freight_document_templates.sql  0024_enterprise_load_model.sql  0025_load_lifecycle_actions.sql  0026_customer_contract_lane_guides.sql  0027_load_board_search_saved_filters.sql  0028_bulk_load_import_api_posting.sql  0029_rating_mileage_fuel_accessorial_rules.sql  0030_facility_geocoding_appointments.sql  0031_mode_specific_workflow_tracks.sql  (+36 more)
rust-port/crates/db/src/: access_reviews.rs  audit.rs  auth.rs  compliance.rs  dispatch.rs  document_rules.rs  eligibility.rs  email_outbox.rs  enterprise_identity.rs  integrations.rs  inventory.rs  legal_agreements.rs  lib.rs  marketplace.rs  master_data.rs  operating_authority.rs  (+8 more)
rust-port/crates/domain/: Cargo.toml
rust-port/crates/frontend-leptos/: Cargo.toml  index.html  runtime-config.js
rust-port/crates/shared/: Cargo.toml
rust-port/docs/: API_CONTRACT_V1.md  API_LIFECYCLE_AND_SANDBOX.md  BACKEND_BLUEPRINT.md  BACKEND_COMPLETION_TODO.md  CANONICAL_STATUS_MODEL.md  CROSS_BORDER_TAX_FX_INCOTERMS.md  ENTERPRISE_BROWSER_SESSION_SECURITY.md  ENTERPRISE_CUSTOMER_OFFBOARDING.md  ENTERPRISE_CUSTOMER_ONBOARDING.md  ENTERPRISE_CUSTOMER_SUCCESS_AND_TRAINING.md  ENTERPRISE_DATA_CLASSIFICATION_AND_ENCRYPTION.md  ENTERPRISE_DATA_MIGRATION_CUTOVER_PLAN.md  ENTERPRISE_DATA_RESIDENCY_DPA.md  ENTERPRISE_FEATURE_FLAGS_AND_CHANGE_CONTROL.md  ENTERPRISE_KEY_MANAGEMENT_AND_PCI_SCOPE.md  ENTERPRISE_LOADBOARD_ROADMAP.md  ENTERPRISE_LOADBOARD_TASK_LIST.md  ENTERPRISE_MFA_AND_STEP_UP.md  ENTERPRISE_MIGRATION_RUNBOOK.md  ENTERPRISE_OPERATING_MODEL.md  ENTERPRISE_ORGANIZATION_TENANT_MODEL.md  ENTERPRISE_PENTEST_AND_VULNERABILITY_DISCLOSURE.md  ENTERPRISE_PENTEST_CUSTOMER_EVIDENCE_TEMPLATE.md  ENTERPRISE_PENTEST_FINDINGS_TRACKER_TEMPLATE.md  ENTERPRISE_PENTEST_RULES_OF_ENGAGEMENT.md  ENTERPRISE_PENTEST_TEST_ACCOUNT_PLAN.md  ENTERPRISE_PENTEST_VENDOR_RFP.md  ENTERPRISE_PERMISSION_MATRIX.md  ENTERPRISE_PRIVACY_DATA_REQUEST_WORKFLOW.md  ENTERPRISE_RATE_LIMITING_AND_LOCKOUT.md  ENTERPRISE_READINESS_GATES.md  ENTERPRISE_RELEASE_COMMUNICATIONS.md  ENTERPRISE_RELEASE_ENVIRONMENTS.md  ENTERPRISE_RELIABILITY_RUNBOOKS.md  ENTERPRISE_REPORTING_METRICS.md  ENTERPRISE_ROLLBACK_RUNBOOK.md  ENTERPRISE_SECRET_FILE_HYGIENE.md  ENTERPRISE_SECURITY_HEADERS_AND_CSP.md  ENTERPRISE_SECURITY_PACKET.md  ENTERPRISE_SLA_SUPPORT_TIERS.md  (+32 more)
rust-port/docs/launch/: STLoads_GO_TO_MARKET_OVERVIEW.md  STLoads_PRODUCTION_RUNBOOK.md  STLoads_SECURITY_OVERVIEW.md  STLoads_SUPPORT_PLAYBOOK.md
rust-port/landing-static/: about.html  contact.html  features.html  how-it-works.html  index.html
rust-port/landing-static/assets/: inner-pages.css  landing-scale.js
rust-port/scripts/: convert_migrations_to_postgres.ps1  convert_runtime_sql_to_postgres.ps1  deploy_code_engine_staging.ps1  frontend_page_inventory.ps1  production_readiness_check.ps1  run_backup_restore_drill.ps1  run_business_continuity_tabletop.ps1  run_ci_backend_integration.ps1  run_ci_docker_build.ps1  run_ci_fast.ps1  run_ci_frontend_release.ps1  run_ci_security.ps1  run_cutover_reconciliation.ps1  run_oncall_siem_drill.ps1  run_performance_smoke.ps1  run_pre_commit.ps1  run_sensitive_output_scan.ps1  rust_api_chain_smoke.sh  security_rate_limit_status.ps1  seed_operator_qa_accounts.ps1  seed_postgres_smoke_data.sql  smoke_test_backend.ps1  validate_runtime_env.ps1  verify_backend_cutover_hosted.ps1  verify_empty_postgres_migrations.ps1  verify_frontend_no_demo_data.ps1  verify_pentest_readiness.ps1  verify_php_lifecycle_states.ps1  verify_php_role_logins.ps1  verify_rust_role_matrix.ps1  verify_smtp_hosted.ps1  verify_stripe_hosted.ps1  verify_tms_workers_hosted.ps1
rust-port/tests/e2e/: phase13-smoke.spec.ts
(+302 files in other folders)
