[workspace]
members = [
    "crates/backend",
    "crates/db",
    "crates/domain",
    "crates/frontend-leptos",
    "crates/shared",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "ws"] }
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
leptos = { version = "0.8", features = ["ssr"] }
leptos_router = { version = "0.8", features = ["ssr"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# SQLx is now compiled for PostgreSQL to match the IBM deployment target.
# The remaining work is migrating raw SQL, migrations, and tests off MySQL-shaped syntax.
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-full", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.0", features = ["serde", "v4"] }


