[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bcrypt.workspace = true
chrono.workspace = true
db = { path = "../db" }
domain = { path = "../domain" }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

