[package]
name = "db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
domain = { path = "../domain" }
shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
sqlx.workspace = true
domain = { path = "../domain" }
shared = { path = "../shared" }
serial_test = "3.2"
