[package]
name = "frontend-leptos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
leptos.workspace = true
leptos_router.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6"
web-sys = { version = "0.3", features = ["Window", "Location", "Storage"] }
