[package]
name = "frontend-leptos"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures-util.workspace = true
leptos = { workspace = true, features = ["csr"] }
leptos_router.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
gloo-net = "0.6"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location", "Storage"] }

